--- a/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
@@ -160,7 +160,7 @@
 
 
 
-      <div ng-class="{'inactive': !selectedSubtitleId}" class="player-control-button player-fill-screen ion-android-textsms" ng-if="options.subtitles.length" ng-click="selectSubtitle()">
+      <div ng-class="{'active': selectedSubtitleId==subtitle.id}" class="player-control-button player-fill-screen ion-android-textsms" ng-if="options.subtitles.length" ng-click="selectSubtitle()">
         <div id="player-menu-subtitle-selector" ng-show="multipleSubtitleBrowser" >
           <div class="subtitle-selector-container">
               <div class="subtitle-list-container">
