--- a/grails-app/assets/javascripts/streama/templates/modal--image-chooser.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/modal--image-chooser.tpl.htm
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-xs-6 col-md-4" ng-repeat="image in vm.imagesForMedia">
       <a ng-click="vm.chooseImage(image)" class="thumbnail">
-        <img ng-src="https://image.tmdb.org/t/p/w300{{image.file_path}}" class=""/>
+        <img ng-src="../images/t/p/w300{{image.file_path}}" class=""/>
       </a>
     </div>
   </div>
