--- a/grails-app/assets/javascripts/streama/templates/modal--tvShow.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/modal--tvShow.tpl.htm
@@ -75,7 +75,7 @@
         <div class="col-sm-6">
           <label>Image</label>
           <br/>
-          <img ng-src="https://image.tmdb.org/t/p/w300/{{tvShow.backdrop_path}}"/>
+          <img ng-src="../images/t/p/w300/{{tvShow.backdrop_path}}"/>
         </div>
       </div>
     </div>
