--- a/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
@@ -42,9 +42,9 @@
           <streama-video-image video="options.nextVideo" type="poster" size="154"></streama-video-image>
         </div>
         <div class="col-xs-8">
-          <h4>Up next...</h4>
-          <h3>{{options.nextVideo.fullTitle}}</h3>
-          <p>{{options.nextVideo.overview}}</p>
+          <h4>{{'VIDEO.UPNEXT' | translate}}</h4>
+          <h3>{{options.nextVideo.fullTitle || options.nextVideo.title}}</h3>
+          <p>{{options.nextVideo.overview.length > 150 ? options.nextVideo.overview.substring(0, 150) + '...' : options.nextVideo.overview}}</p>
 
           <button class="play-button with-label" ng-click="next()"> <span class="play-label">play now</span> <i class="ion-ios-play"></i></button>
         </div>
