--- a/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/streama-video-player.tpl.htm
@@ -137,7 +137,7 @@
 
                     <div class="extra-episode-info" ng-if="visible || (episode.episode_number == video.episode_number && episode.season_number == video.season_number)">
                       <div class="image-wrapper">
-                        <img ng-if="episode.still_path" ng-src="../images/t/p/w92/{{episode.still_path}}"/>
+                        <img ng-if="episode.still_path" ng-src="https://image.tmdb.org/t/p/w92/{{episode.still_path}}"/>
                         <img ng-if="!episode.still_path && episode.still_image_src" ng-src="{{episode.still_image_src}}"/>
                         <div ng-if="!episode.still_path && !episode.still_image_src" class="fallback-image"></div>
                       </div>
@@ -156,26 +156,7 @@
 
 
 
-
-
-
-
-      <div ng-class="{'active': selectedSubtitleId==subtitle.id}" class="player-control-button player-fill-screen ion-android-textsms" ng-if="options.subtitles.length" ng-click="selectSubtitle()">
-        <div id="player-menu-subtitle-selector" ng-show="multipleSubtitleBrowser" >
-          <div class="subtitle-selector-container">
-              <div class="subtitle-list-container">
-                <ul class="subtitle-list">
-                  <li ng-class="{'active':!selectedSubtitleId}" class="subtitle" ng-click="hideSubtitle()">
-                    <span >{{'VIDEO.NO_SUBTITLE' | translate}}</span>
-                  </li>
-                  <li ng-class="{'active':selectedSubtitleId==subtitle.id}" ng-click="changeSubtitle(subtitle)" class="subtitle" ng-repeat="subtitle in options.subtitles | orderBy:'subtitleSrcLang'">
-                    <span >  {{subtitle.subtitleLabel || subtitle.originalFilename}}</span>
-                  </li>
-                </ul>
-              </div>
-        </div>
-      </div>
-      </div>
+      <div class="player-control-button player-fill-screen ion-android-textsms" ng-if="options.subtitles.length >= 1 || options.videoFiles.length > 1" ng-click="openPlaybackOptions()"></div>
 
 
 
@@ -202,7 +183,7 @@
     </section>
   </div>
 
-  <video ng-if="isInitialized" id="video" ng-src="{{options.videoSrc}}" type="{{options.videoType}}" ng-click="clickVideo()" >
+  <video ng-if="isInitialized" id="video" ng-src="{{options.videoSrc}}" type="{{options.videoType}}" ng-click="clickVideo()" class="subtitle-size-{{options.subtitleSize}}">
     <track ng-repeat="subtitle in options.subtitles" ng-src="{{subtitle.src}}" kind="subtitles" id="subtitle-{{subtitle.id}}"
            srclang="{{subtitle.subtitleSrcLang}}" label="{{subtitle.subtitleLabel}}" src="{{subtitle.src}}">
   </video>
